--- a/ingress-service.yaml
+++ b/ingress-service.yaml
@@ -1,32 +1,32 @@
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  name: corsegsm-argocd-ingress
+  name: corsegsm-argocd-ingress-test
   namespace: corsegsm-argocd
   annotations:
-    cert-manager.io/cluster-issuer: letsencrypt-prod
-    kubernetes.io/ingress.class: nginx
+    cert-manager.io/cluster-issuer: letsencrypt-staging
+    #kubernetes.io/ingress.class: nginx
     kubernetes.io/tls-acme: "true"
-    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
+    #nginx.ingress.kubernetes.io/ssl-passthrough: "true"
     # If you encounter a redirect loop or are getting a 307 response code 
     # then you need to force the nginx ingress to connect to the backend using HTTPS.
     #
-    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
+    #nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
 spec:
   rules:
-  - host: corsegsm-argocd.40.117.114.146.xip.io
+  - host: corsegsm-argocd-ingress-test.40.117.114.146.xip.io
     http:
       paths:
       - backend:
           serviceName: back-office
-          servicePort: https
+          servicePort: 80
         path: /back-office
         pathType: Prefix
       - backend:
           serviceName: frontend
-          servicePort: https
+          servicePort: 80
         path: /cjv
         pathType: Prefix
   tls:
   - hosts:
-    - corsegsm-argocd.40.117.114.146.xip.io
+    - corsegsm-argocd-ingress-test.40.117.114.146.xip.io
