--- a/ingress-service.yaml
+++ b/ingress-service.yaml
@@ -4,9 +4,9 @@ metadata:
   name: corsegsm-argocd-ingress-test
   namespace: corsegsm-argocd
   annotations:
-    cert-manager.io/cluster-issuer: letsencrypt-staging
+    #cert-manager.io/cluster-issuer: letsencrypt-staging
     #kubernetes.io/ingress.class: nginx
-    kubernetes.io/tls-acme: "true"
+    #kubernetes.io/tls-acme: "true"
     #nginx.ingress.kubernetes.io/ssl-passthrough: "true"
     # If you encounter a redirect loop or are getting a 307 response code 
     # then you need to force the nginx ingress to connect to the backend using HTTPS.
@@ -27,6 +27,6 @@ spec:
           servicePort: 80
         path: /cjv
         pathType: Prefix
-  tls:
-  - hosts:
-    - corsegsm-argocd-ingress-test.40.117.114.146.xip.io
+  #tls:
+  #- hosts:
+  #  - corsegsm-argocd-ingress-test.40.117.114.146.xip.io
