--- a/back-office-configmap.yaml
+++ b/back-office-configmap.yaml
@@ -7,7 +7,7 @@ data:
     server {
     listen       80;
     location / {
-        alias   /usr/share/nginx/html/
+        alias   /usr/share/nginx/html/;
         rewrite ^(.*)\/\/([a-zA-Z0-9-.:]*)\/?(.*)$ $2/$3 permanent;
         try_files $uri $uri/ index.html;
     }
